--- a/Timely Goals/Base.lproj/Main.storyboard
+++ b/Timely Goals/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -56,7 +57,7 @@
                                                         <constraint firstAttribute="width" constant="120" id="t8L-2Y-VKN"/>
                                                     </constraints>
                                                     <nil key="textColor"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textField>
                                             </subviews>
@@ -83,8 +84,8 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="99" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vzE-ix-MJN" userLabel="Add List Label">
-                                                    <rect key="frame" x="10" y="7" width="12.5" height="26"/>
-                                                    <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="20"/>
+                                                    <rect key="frame" x="10" y="0.5" width="18.5" height="39"/>
+                                                    <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="30"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -139,37 +140,35 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="go5-jl-1h4" userLabel="Label Wrapper">
                                                     <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
                                                     <subviews>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Aa-9C-Ict" userLabel="Remind Button">
-                                                            <rect key="frame" x="10" y="19.5" width="50" height="31"/>
-                                                            <color key="backgroundColor" red="0.78431372549019607" green="0.78431372549019607" blue="0.78431372549019607" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Aa-9C-Ict" userLabel="Remind Button">
+                                                            <rect key="frame" x="10" y="19.5" width="32" height="32"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="50" id="XEI-3u-HTA"/>
+                                                                <constraint firstAttribute="height" constant="32" id="0kx-sh-IFR"/>
+                                                                <constraint firstAttribute="width" secondItem="1Aa-9C-Ict" secondAttribute="height" multiplier="1:1" id="1FE-zm-7tI"/>
                                                             </constraints>
-                                                            <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="14"/>
-                                                            <state key="normal" title="remind">
+                                                            <state key="normal" image="clockIcon">
                                                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             </state>
                                                         </button>
-                                                        <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="New Task" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HaX-zv-bwN">
-                                                            <rect key="frame" x="75" y="16" width="63" height="19"/>
+                                                        <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="New Task" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="HaX-zv-bwN">
+                                                            <rect key="frame" x="52" y="14.5" width="216" height="22"/>
                                                             <nil key="textColor"/>
-                                                            <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="14"/>
+                                                            <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="17"/>
                                                             <textInputTraits key="textInputTraits"/>
                                                         </textField>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M6t-gL-h1i">
-                                                            <rect key="frame" x="75" y="35" width="28" height="16"/>
-                                                            <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="12"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tomorrow, 12:30 PM, Every 5 Months" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="M6t-gL-h1i">
+                                                            <rect key="frame" x="52" y="36.5" width="216" height="18.5"/>
+                                                            <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="648-dC-Ykg">
-                                                            <rect key="frame" x="270" y="20" width="40" height="31"/>
-                                                            <color key="backgroundColor" red="0.78431372549019607" green="0.78431372549019607" blue="0.78431372549019607" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="648-dC-Ykg">
+                                                            <rect key="frame" x="278" y="19" width="32" height="32"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="JlC-vG-zjI"/>
+                                                                <constraint firstAttribute="width" secondItem="648-dC-Ykg" secondAttribute="height" multiplier="1:1" id="Ckt-SO-VME"/>
+                                                                <constraint firstAttribute="height" constant="32" id="KAF-y2-d0d"/>
                                                             </constraints>
-                                                            <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="14"/>
-                                                            <state key="normal" title="recur">
+                                                            <state key="normal" image="recurIcon">
                                                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             </state>
                                                         </button>
@@ -177,12 +176,14 @@
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
-                                                        <constraint firstItem="HaX-zv-bwN" firstAttribute="leading" secondItem="1Aa-9C-Ict" secondAttribute="trailing" constant="15" id="0Sz-q6-0rU"/>
+                                                        <constraint firstItem="HaX-zv-bwN" firstAttribute="leading" secondItem="1Aa-9C-Ict" secondAttribute="trailing" constant="10" id="0Sz-q6-0rU"/>
                                                         <constraint firstItem="M6t-gL-h1i" firstAttribute="top" secondItem="HaX-zv-bwN" secondAttribute="bottom" id="0vq-av-KlS"/>
                                                         <constraint firstItem="HaX-zv-bwN" firstAttribute="centerY" secondItem="go5-jl-1h4" secondAttribute="centerY" constant="-10" id="3nh-a3-ekQ"/>
                                                         <constraint firstAttribute="trailing" secondItem="648-dC-Ykg" secondAttribute="trailing" constant="10" id="586-ab-l1a"/>
+                                                        <constraint firstItem="648-dC-Ykg" firstAttribute="leading" secondItem="M6t-gL-h1i" secondAttribute="trailing" constant="10" id="8Gx-Od-v5l"/>
                                                         <constraint firstItem="1Aa-9C-Ict" firstAttribute="leading" secondItem="go5-jl-1h4" secondAttribute="leading" constant="10" id="LvO-Uy-EXA"/>
                                                         <constraint firstItem="1Aa-9C-Ict" firstAttribute="centerY" secondItem="go5-jl-1h4" secondAttribute="centerY" id="YUX-AX-aYB"/>
+                                                        <constraint firstItem="648-dC-Ykg" firstAttribute="leading" secondItem="HaX-zv-bwN" secondAttribute="trailing" constant="10" id="a2V-WA-cJe"/>
                                                         <constraint firstItem="648-dC-Ykg" firstAttribute="centerY" secondItem="go5-jl-1h4" secondAttribute="centerY" id="iIz-ah-WbW"/>
                                                         <constraint firstItem="M6t-gL-h1i" firstAttribute="leading" secondItem="HaX-zv-bwN" secondAttribute="leading" id="qxQ-wY-pei"/>
                                                     </constraints>
@@ -224,16 +225,16 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                                     <subviews>
                                                         <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VJZ-VY-e8T" userLabel="Add Button">
-                                                            <rect key="frame" x="10" y="0.0" width="30" height="45"/>
-                                                            <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="25"/>
+                                                            <rect key="frame" x="10" y="-3" width="30" height="51"/>
+                                                            <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="30"/>
                                                             <state key="normal" title="+">
                                                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             </state>
                                                         </button>
                                                         <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vPW-VM-Buw" userLabel="Task Field">
-                                                            <rect key="frame" x="55" y="12.5" width="215" height="19"/>
+                                                            <rect key="frame" x="55" y="11" width="215" height="22"/>
                                                             <nil key="textColor"/>
-                                                            <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="14"/>
+                                                            <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="17"/>
                                                             <textInputTraits key="textInputTraits"/>
                                                         </textField>
                                                     </subviews>
@@ -315,5 +316,7 @@
     </scenes>
     <resources>
         <image name="checkmarkwhite" width="512" height="512"/>
+        <image name="clockIcon" width="128" height="128"/>
+        <image name="recurIcon" width="512" height="512"/>
     </resources>
 </document>
