--- a/Timely Goals/Base.lproj/Main.storyboard
+++ b/Timely Goals/Base.lproj/Main.storyboard
@@ -107,18 +107,18 @@
                                 <rect key="frame" x="0.0" y="80" width="320" height="488"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="TaskCell" rowHeight="70" id="1Xo-Pg-TOO" customClass="TaskCell" customModule="Timely_Goals" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="320" height="70"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="TaskCell" id="1Xo-Pg-TOO" customClass="TaskCell" customModule="Timely_Goals" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1Xo-Pg-TOO" id="CKc-lF-sWj">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="69.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vXT-pt-snq" userLabel="Background">
-                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmarkwhite" translatesAutoresizingMaskIntoConstraints="NO" id="m46-zu-KCy" userLabel="whitemark">
-                                                            <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                                            <rect key="frame" x="0.0" y="2" width="40" height="40"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="40" id="5gC-xJ-xM0"/>
                                                                 <constraint firstAttribute="height" constant="40" id="6xZ-k9-w6d"/>
@@ -129,7 +129,7 @@
                                                     <constraints>
                                                         <constraint firstItem="m46-zu-KCy" firstAttribute="leading" secondItem="vXT-pt-snq" secondAttribute="leading" id="3BX-g3-Voi"/>
                                                         <constraint firstAttribute="trailing" secondItem="m46-zu-KCy" secondAttribute="trailing" id="Tcy-h5-21Q"/>
-                                                        <constraint firstItem="m46-zu-KCy" firstAttribute="top" secondItem="vXT-pt-snq" secondAttribute="top" id="lCr-UG-piQ"/>
+                                                        <constraint firstItem="m46-zu-KCy" firstAttribute="centerY" secondItem="vXT-pt-snq" secondAttribute="centerY" id="lCr-UG-piQ"/>
                                                     </constraints>
                                                     <variation key="default">
                                                         <mask key="constraints">
@@ -138,10 +138,10 @@
                                                     </variation>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="go5-jl-1h4" userLabel="Label Wrapper">
-                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                                     <subviews>
                                                         <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Aa-9C-Ict" userLabel="Remind Button">
-                                                            <rect key="frame" x="10" y="19.5" width="32" height="32"/>
+                                                            <rect key="frame" x="10" y="6.5" width="32" height="32"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="32" id="0kx-sh-IFR"/>
                                                                 <constraint firstAttribute="width" secondItem="1Aa-9C-Ict" secondAttribute="height" multiplier="1:1" id="1FE-zm-7tI"/>
@@ -150,20 +150,21 @@
                                                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             </state>
                                                         </button>
-                                                        <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="New Task" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="HaX-zv-bwN">
-                                                            <rect key="frame" x="52" y="14.5" width="216" height="22"/>
+                                                        <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="New Task" textAlignment="natural" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="HaX-zv-bwN">
+                                                            <rect key="frame" x="52" y="5" width="216" height="14.5"/>
+                                                            <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="textColor"/>
                                                             <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="17"/>
-                                                            <textInputTraits key="textInputTraits"/>
+                                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                         </textField>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tomorrow, 12:30 PM, Every 5 Months" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="M6t-gL-h1i">
-                                                            <rect key="frame" x="52" y="36.5" width="216" height="18.5"/>
+                                                            <rect key="frame" x="52" y="14.5" width="216" height="24"/>
                                                             <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="648-dC-Ykg">
-                                                            <rect key="frame" x="278" y="19" width="32" height="32"/>
+                                                            <rect key="frame" x="278" y="6" width="32" height="32"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="648-dC-Ykg" secondAttribute="height" multiplier="1:1" id="Ckt-SO-VME"/>
                                                                 <constraint firstAttribute="height" constant="32" id="KAF-y2-d0d"/>
@@ -177,11 +178,13 @@
                                                     <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstItem="HaX-zv-bwN" firstAttribute="leading" secondItem="1Aa-9C-Ict" secondAttribute="trailing" constant="10" id="0Sz-q6-0rU"/>
-                                                        <constraint firstItem="M6t-gL-h1i" firstAttribute="top" secondItem="HaX-zv-bwN" secondAttribute="bottom" id="0vq-av-KlS"/>
+                                                        <constraint firstItem="M6t-gL-h1i" firstAttribute="top" secondItem="HaX-zv-bwN" secondAttribute="bottom" constant="-5" id="0vq-av-KlS"/>
                                                         <constraint firstItem="HaX-zv-bwN" firstAttribute="centerY" secondItem="go5-jl-1h4" secondAttribute="centerY" constant="-10" id="3nh-a3-ekQ"/>
                                                         <constraint firstAttribute="trailing" secondItem="648-dC-Ykg" secondAttribute="trailing" constant="10" id="586-ab-l1a"/>
                                                         <constraint firstItem="648-dC-Ykg" firstAttribute="leading" secondItem="M6t-gL-h1i" secondAttribute="trailing" constant="10" id="8Gx-Od-v5l"/>
+                                                        <constraint firstItem="HaX-zv-bwN" firstAttribute="top" secondItem="go5-jl-1h4" secondAttribute="top" constant="5" id="LXA-Xi-pNQ"/>
                                                         <constraint firstItem="1Aa-9C-Ict" firstAttribute="leading" secondItem="go5-jl-1h4" secondAttribute="leading" constant="10" id="LvO-Uy-EXA"/>
+                                                        <constraint firstAttribute="bottom" secondItem="M6t-gL-h1i" secondAttribute="bottom" constant="5" id="W3T-N4-Yy6"/>
                                                         <constraint firstItem="1Aa-9C-Ict" firstAttribute="centerY" secondItem="go5-jl-1h4" secondAttribute="centerY" id="YUX-AX-aYB"/>
                                                         <constraint firstItem="648-dC-Ykg" firstAttribute="leading" secondItem="HaX-zv-bwN" secondAttribute="trailing" constant="10" id="a2V-WA-cJe"/>
                                                         <constraint firstItem="648-dC-Ykg" firstAttribute="centerY" secondItem="go5-jl-1h4" secondAttribute="centerY" id="iIz-ah-WbW"/>
@@ -215,7 +218,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AddCell" id="kRq-M4-eLP" customClass="AddCell" customModule="Timely_Goals" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="98" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="72" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kRq-M4-eLP" id="kKH-CD-3SC">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
@@ -233,9 +236,10 @@
                                                         </button>
                                                         <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vPW-VM-Buw" userLabel="Task Field">
                                                             <rect key="frame" x="55" y="11" width="215" height="22"/>
+                                                            <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="textColor"/>
                                                             <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="17"/>
-                                                            <textInputTraits key="textInputTraits"/>
+                                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                         </textField>
                                                     </subviews>
                                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -313,7 +317,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1260" y="341.37931034482762"/>
+            <point key="canvasLocation" x="-1260" y="341.19718309859155"/>
         </scene>
     </scenes>
     <resources>
